fix(app): use correct column positioning on IE11

--- a/components/app/mixins.scss
+++ b/components/app/mixins.scss
@@ -35,5 +35,5 @@
   grid-column-start: $start;
   grid-column-end: span #{($end - $start) + 1};
   -ms-grid-column: $start;
-  -ms-grid-column-span: span #{($end - $start) + 1};
+  -ms-grid-column-span: #{($end - $start) + 1};
 }
